# 402-hardware

./: .env  AGENTS.md  README.md  bom.csv  bom.md
backend/: .env.example  package-lock.json  package.json
backend/src/: checkout.ts  index.ts  session-store.ts  types.ts  x402.ts
backend/src/routes/: menu.ts  pay.ts  session.ts
backend/test/: checkout.test.ts  menu.test.ts  pay.test.ts  session.test.ts
docs/superpowers/specs/: 2026-06-23-x402-vending-terminal-design.md
firmware/: Cargo.toml  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/src/: api.rs  display.rs  main.rs  pins.rs  touch.rs  types.rs  vend.rs  wifi.rs
